--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,17 @@
 .gradle
+/gradle/
+/bin/
 /build/
+.settings
+gradlew
+build.bat
+.classpath
 
 # Ignore Gradle GUI config
 gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
+gradle-wrapper.jar
 
 # Cache of project
 .gradletasknamecache
