--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,10 @@ build.bat
 .classpath
 
 # Ignore Gradle GUI config
-gradle-app.setting
+#gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-gradle-wrapper.jar
+#gradle-wrapper.jar
 
 # Cache of project
 .gradletasknamecache
